v1.3.0/product-specifications/admin-functions/20.-config-management.md
# 20. Config management

OpenCRVS is engineered for adaptability, allowing for configuration to comply with diverse country-specific laws and regulations. The different interfaces are described below on how the you can configure how the system looks and functions.

Some configuration is done in the back-end, such as uploading administrative data. For back-end tasks, explore [https://github.com/opencrvs/documentation/blob/release-v1.3.0/product-specifications/admin-functions/broken-reference/README.md](https://github.com/opencrvs/documentation/blob/release-v1.3.0/product-specifications/admin-functions/broken-reference/README.md "mention") for detailed step-by-step guidance.

### **Application**

From the Application configuration screen general system settings can be set.

#### **General:**

* **Name:** Sets the name of the application
* **Logo:** Sets the logo used on the login screen and review screen
* **Login background:** Choose from an image or colour for the login screens
* **Currency:** Set the currency symbol used in performance and fee collection screens
* **Phone regex:** Sets the phone number validation rules for phone number inputs
* **NID regex:** Sets the national id rules for phone number inputs
* **Registration number format:** Sets the format of registration numbers generated by the system on registration (developer)

#### **Registration time periods:**

OpenCRVS tracks when a registration occurred and compares this to the date of the vital event. This gives a view of the time that has elapsed known as the registration time periods. These time periods are used in performance management for users track registrations against, but also trigger fee collection procedures, if for instance a registration late.

#### **Time periods:**

* Within legally specified (eg. within 30days of the event)
* Delayed (Birth events only)
* Late

#### **Fees:**

* Within legally specified
* Delayed
* Late

### **Declaration forms**

The declaration form for each event (births, deaths, marriages) can be configured by a developer. \
\
Each form is split into pages also known as sections. On each page you can choose to use different input types (text, select, number, radio, checkbox, text area) to aid the user to complete the form. \


### **Certificate**

Each vital event can have a paper certificate that is printed and issued to the informant. To create a certificate template a designer can create the desired design and export as an .svg for the National System Admin to upload in the certificate configuration screen.

For detailed instructions on how to configure your own certificates please see: [3.2.6-configure-certificate-templates.md](../../setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.6-configure-certificate-templates.md "mention")

#### Configuration options:

* Create any layout
* Add any logos and/or images
* Select what registration data you want to show
* Use different font
* Add a QR code to verify the certificate

From the Certificate configuration screen, a National System Admin can preview and print the certificate so that can test if it is correctly populating registration data and printing correctly.

### User roles

OpenCRVS has **system roles** which reflect common actors involved in civil registration services around the world. The system roles have defined responsibilities and capabilities in the system.

On the **User roles** system configuration screen a National System Admin can map these system roles to custom user type names as required. For example a Field Agent who is responsible for creating declarations and sending them to Registration Offices can be mapped to a Healthcare Worker and Police Officer.\
\
For detailed instructions on how to configure user roles please see: [4.5-create-system-users.md](../../setup/4.-functional-configuration/4.5-create-system-users.md "mention")
