v1.7.0/product-specifications/admin-functions/20.-config-management.md
# 24. Config management

OpenCRVS is engineered for adaptability, allowing for configuration to comply with diverse country-specific laws and regulations. The different interfaces are described below on how the you can configure how the system looks and functions.

Some configuration is done in the back-end, such as uploading administrative data. For back-end tasks, explore [3.2-set-up-your-own-country-configuration](../../setup/3.-installation/3.2-set-up-your-own-country-configuration/ "mention") for detailed step-by-step guidance.

### **Application**

From the Application configuration screen general system settings can be set.&#x20;

#### **General:**

* **Name:** Sets the name of the application
* **Logo:** Sets the logo used on the login screen and review screen
* **Login background:** Choose from an image or colour for the login screens
* **Currency:** Set the currency symbol used in performance and fee collection screens
* **Phone regex:** Sets the phone number validation rules for phone number inputs
* **NID regex:** Sets the national id rules for phone number inputs
* **Registration number format:** Sets the format of registration numbers generated by the system on registration (developer)

#### **Registration time periods:**

OpenCRVS tracks when a registration occurred and compares this to the date of the vital event. This gives a view of the time that has elapsed known as the registration time periods. These time periods are used in performance management for users track registrations against, but also trigger fee collection procedures, if for instance a registration late.

#### **Time periods:**

* Within legally specified (eg. within 30days of the event)
* Delayed (Birth events only)
* Late

#### **Fees:**

* Within legally specified
* Delayed
* Late

To learn about application settings please refer to [3.3-define-your-application-settings.md](../../setup/2.-gather-requirements/3.3-define-your-application-settings.md "mention")

### **Declaration forms**

The declaration form for each event (births, deaths, marriages) can be configured by a developer. \
\
Each form is split into pages also known as sections. On each page you can choose to use different input types (text, select, number, radio, checkbox, text area) to aid the user to complete the form.&#x20;

To learn more please refer to [3.4-designing-event-declaration-forms.md](../../setup/2.-gather-requirements/3.4-designing-event-declaration-forms.md "mention")

### **Certificate**

Each vital event can have a paper certificate that is printed and issued to the informant. To create a certificate template a designer can create the desired design and export as an .svg for the National System Admin to upload in the certificate configuration screen.

#### Configuration options:

* Create any layout
* Add any logos and/or images
* Select what registration data you want to show
* Use different font
* Add a QR code to verify the certificate

From the Certificate configuration screen, a National System Admin can preview and print the certificate so that can test if it is correctly populating registration data and printing correctly.\


For detailed instructions on how to configure your own certificates please see: \
[3.5-designing-a-certificate-template.md](../../setup/2.-gather-requirements/3.5-designing-a-certificate-template.md "mention")\
[3.2.6-configure-certificate-templates.md](../../setup/3.-installation/3.2-set-up-your-own-country-configuration/3.2.6-configure-certificate-templates.md "mention")\


### User roles

OpenCRVS has **system roles** which reflect common actors involved in civil registration services around the world. The system roles have defined responsibilities and capabilities in the system.

On the **User roles** system configuration screen a National System Admin can map these system roles to custom user type names as required. For example a Field Agent who is responsible for creating declarations and sending them to Registration Offices can be mapped to a Healthcare Worker and Police Officer.\
\
For detailed instructions on how to map user roles please see:\
[3.2-mapping-offices-and-user-types.md](../../setup/2.-gather-requirements/3.2-mapping-offices-and-user-types.md "mention")\
[Broken link](broken-reference "mention")



{% embed url="https://youtu.be/4km1pcS4dWg" %}
